tests/integration/pilot/test_artifacts/pilot-f119641b99704107b0cfca0c6/TestTraffic/virtualservice/set_host_header_multi_destination/tproxy/to_tproxy/_test_context/VirtualService.1878891905.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-60257
spec:
  hosts:
  - tproxy
  http:
  - route:
    - destination:
        host: tproxy
      headers:
        request:
          set:
            Host: dest-authority
      weight: 50
    - destination:
        host: tproxy
      headers:
        request:
          set:
            Host: dest-authority
      weight: 50
